--- a/Index.html
+++ b/Index.html
@@ -222,7 +222,7 @@
                 currentImageIndex++;
                 updateGallery();
             } else {
-                window.location.href = 'pedido.html'; // Adiciona esta linha para redirecionar para pedido.html
+                window.location.href = 'Pedido.html'; // Adiciona esta linha para redirecionar para pedido.html
             }
         }
 
