--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedido Especial</title>
+    <title>07-09</title>
     <style>
         * {
             margin: 0;
@@ -47,7 +47,7 @@
 
         button {
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #d60e0e;
             color: white;
             border: none;
             border-radius: 5px;
@@ -56,7 +56,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #550808;
         }
 
         .error {
@@ -94,7 +94,7 @@
 
         .gallery-buttons button {
             padding: 10px 15px;
-            background-color: #4CAF50;
+            background-color: #d60e0e;
             color: white;
             border: none;
             border-radius: 5px;
@@ -102,7 +102,7 @@
         }
 
         .gallery-buttons button:hover {
-            background-color: #45a049;
+            background-color: #550808;
         }
 
         /* Animação dos corações */
@@ -139,7 +139,6 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pedido Especial</h1>
         <p>Digite a senha para ver a surpresa:</p>
         <input type="password" id="password" placeholder="Senha">
         <button onclick="checkPassword()">Entrar</button>
@@ -148,7 +147,7 @@
 
     <div class="gallery hidden">
         <img id="gallery-img" src="imagem1.jpg" alt="Imagem Galeria">
-        <p id="gallery-text" class="gallery-text">Strogonoff - Não sou sua comida favorita, mas queria ser a batata-palha do seu strogonoff.</p>
+        <p id="gallery-text" class="gallery-text">Não sou sua comida favorita, mas queria ser a batata-palha do seu strogonoff.</p>
         <div class="gallery-buttons">
             <button onclick="previousImage()">Voltar</button>
             <button onclick="nextImage()">Próxima</button>
@@ -175,31 +174,31 @@
         const galleryData = [
             {
                 img: "imagem1.jpg",
-                text: "Strogonoff - Não sou sua comida favorita, mas queria ser a batata-palha do seu strogonoff."
+                text: "Não sou sua comida favorita, mas queria ser a batata-palha do seu strogonoff."
             },
             {
                 img: "imagem2.jpg",
-                text: "Girassóis - Não sou um girassol, mas espero estar sempre na sua direção."
+                text: "Não sou um girassol, mas espero estar sempre na sua direção."
             },
             {
                 img: "imagem3.jpg",
-                text: "Roxo - Não sou sua cor preferida, mas quero estar com você para colorir meu dia."
+                text: "Não sou sua cor preferida, mas quero estar com você para colorir meu dia."
             },
             {
                 img: "imagem4.png",
-                text: "Van Gogh - Van Gogh amou o amarelo porque não conheceu o castanho dos seus olhos. Ele ficaria fascinado, assim como eu."
+                text: "Van Gogh amou o amarelo porque não conheceu o castanho dos seus olhos. Ele ficaria fascinado, assim como eu."
             },
             {
                 img: "imagem5.png",
-                text: "Direito - Não sou advogado, mas espero fazer tudo direito sempre que precisar de mim."
+                text: "Não sou advogado, mas espero fazer tudo direito sempre que precisar de mim."
             },
             {
                 img: "imagem6.png",
-                text: "Partilha de Bens - Não sou partilha de bens, porque meu bem mais precioso é você, e não quero partilhar com ninguém."
+                text: "Não sou partilha de bens, porque meu bem mais precioso é você, e não quero partilhar com ninguém."
             },
             {
                 img: "imagem7.jfif",
-                text: "Catavento - Não sou catavento, mas espero que a brisa do vento sempre me leve até você."
+                text: "Não sou catavento, mas espero que a brisa do vento sempre me leve até você."
             },
             {
                 img: "imagem8.jpg",
